2007-12-03  Lars Clausen  <lars@raeder.dk>

	* app/undo.[ch]: New function undo_remove_to removes items from the
	undo stack until hitting a specific kind of undo item.  Needed for
	text edit undo collapsing, but not used yet.

	* app/modify_tool.c: 
	* app/diagram.c: 
	* app/disp_callbacks.c: 
	* app/textedit_tool.c: 
	* app/layer_dialog.c: 
	* app/display.[ch]:
	* app/commands.c: 
	* lib/diagramdata.[ch]: 
	* lib/text.c: 
	* lib/focus.[ch]: Focus list and active focus now per-diagram.
	Selection kept when switching between diagrams.

2007-12-01  Lars Clausen  <lars@raeder.dk>

	* po/LINGUAS: Added Punjabi (pa), as pointed out by
	http://l10n.gnome.org/module/dia. Closes bug #500745.

	* po/POTFILES.in: Added diacairo-interactive.c, tree.c and
	outline.c, as suggested on http://l10n.gnome.org/module/dia.
	Closes bug #500739.

2007-11-20  Lars Clausen  <lars@raeder.dk>

	* shapes/Cisco/Makefile.am: Fixed wrong numbering of shape list.

2007-11-11  Hans Breuer  <hans@breuer.org>

	* objects/standard/outline.c : avoid drawing invalid number of bezier 
	points (and thus crashing)

	[
	  Much decreased start-up time and memory usage by delay loading
	  custom shapes. Closing bug #
	]
	* objects/custom/shape_typeinfo.c : (new file) extracting the type
	information of the custom shape by reading the first 512 bytes
	using libxml SAX. Instead of DOM it does not load the whole file
	into memory.
	* objects/custom/custom.c : implement and use custom_object_preload()
	based on the above. Use it in load_shape_from_tree() - the routine
	scanning all shapes at start-up
	* objects/custom/shape_info.[ch] : adapt infrastructure to to the
	complete loading of the shape file on demand
	[
	  there were 5 - out of ~700 shapes - which failed the size assumption 
	  (reading only the first 512 bytes of the shape). They are modified
	  instead of making the (pre-)loading of all shapes slower.
 	]
	* shapes/Map/Isometric/Car1.shape shapes/Map/Isometric/Car2.shape